# Runorna

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
assets/: dark.css  main.css  tailwind.css
src/: main.rs
src/components/: accordion_component.rs  button_component.rs  folder_items_component.rs  mod.rs  navbar_component.rs
src/data/: folder_sqlite_db.rs  mod.rs  theme_db.rs
src/helpers/: mod.rs  structs_enums_helpers.rs
src/pages/: editor_page.rs  faq_page.rs  home_page.rs  mod.rs  settings_page.rs
src/syntax/: highlighted_markdown.rs  mod.rs  rust_highlighter.rs
