[package]
name = "torex"
version = "0.1.0"
authors = ["cyprien"]
edition = "2021"

[dependencies]
ammonia = "4.1.0"
comrak = "0.39.0"
dioxus = { version = "0.7.0-alpha.1", features = ["router", "fullstack"] }
pulldown-cmark = "0.13.0"
syntect = "5.2.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
