[package]
name = "codeor"
version = "0.1.0"
authors = ["Cyprien de Fontenay"]
edition = "2021"

[dependencies]
ammonia = "4.1.0"
dioxus = { version = "0.7.0-alpha.1", features = ["router", "fullstack"] }
pulldown-cmark = "0.13.0"
syntect = "5.2.0"
rusqlite = { version = "0.36.0", features = ["bundled", "unlock_notify"], optional = true }
chrono = "0.4.41"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
tokio = "1.45.1"

[features]
default = ["desktop", "server"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:rusqlite"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
