[package]
name = "runorna"
version = "0.1.0"
authors = ["Cyprien de Fontenay"]
edition = "2021"

[dependencies]
ammonia = "4.1.2"
dioxus = { version = "0.7.0-rc.0", features = ["router"] }
pulldown-cmark = "0.13.0"
syntect = "5.3.0"
rusqlite = { version = "0.37.0", features = ["bundled", "unlock_notify"] }
chrono = "0.4.42"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
tokio = "1.47.1"
anyhow = "1.0.100"
wasm-bindgen = "0.2.104"

[features]
default = ["dioxus/desktop"]
desktop = ["dioxus/desktop"]